--- a/tags.html
+++ b/tags.html
@@ -21,9 +21,9 @@
   <link rel="stylesheet" type="text/css" href="/css/tufte.css">
   <!-- <link rel="stylesheet" type="text/css" href="/css/print.css" media="print"> -->
 
-  <link rel="canonical" href="http://localhost:4000/tags">
+  <link rel="canonical" href="/tags">
 
-  <link rel="alternate" type="application/rss+xml" title="Maths from the Ground Up" href="http://localhost:4000/feed.xml" />
+  <link rel="alternate" type="application/rss+xml" title="Maths from the Ground Up" href="/feed.xml" />
 </head>
 
   <body>
