Publishing the latest site from the gh-pages branch.

--- a/index.html
+++ b/index.html
@@ -81,14 +81,25 @@
 
 <p>Over the years I’ve been a little profligate with my internet prescence. Here’s a handy overview, with some deep links into the semi-interesting bits.</p>
 
-<p>There are three sections: Speaking, Open Source, and Blogging.  You can also find me on <a href="https://twitter.com/al94781">Twitter</a> and <a href="https://www.linkedin.com/in/andrewharmellaw">LinkedIn</a>.</p>
+<p>There are four sections: Training, Speaking / Panels, Open Source, and Blogging.  You can also find me on <a href="https://twitter.com/al94781">Twitter</a> and <a href="https://www.linkedin.com/in/andrewharmellaw">LinkedIn</a>.</p>
 
-<h1 id="speaking">Speaking</h1>
-<p>I’ve been lucky enough to talk at a bunch of UK and international conferences. My main talks have been as follows:</p>
+<h1 id="speaking">Training</h1>
+<p>I was fortunate to be asked to write a course for the O'Reilly online training Platform.  The result, a three-hour, hands-on extravaganza is titled <a href="https://learning.oreilly.com/live-training/courses/domain-driven-design-first-steps/0636920051628/">Domain-Driven Design: First Steps</a> and runs every 2 months or so.</p>
 
-<p><a href="https://www.youtube.com/watch?v=3CFyA4iecng">Combatting the Near Enemies of Domain Driven Design - at Scale</a> (DDD Europe in Amsterdam, O’Reilly Architecture Conference in Berlin and DDD eXchange in London, 2018-19)</p>
+<h1 id="speaking">Speaking / Panels</h1>
+<p>I’ve been lucky enough to contribute to a bunch of UK and international conferences and meetups. My main contributions have been as follows:</p>
 
-<p><a href="https://www.youtube.com/watch?v=_jqPxGShb90">Organisation Refactoring and Culture Hacking - Lessons from Software</a> (Voxxed Days in Banff, Devoxx London and Belgium, and JFokus Stockholm, 2018-19)</p>
+<p><a href="">Domain-Driven Design: The Bare Essentials + Microservices (aka "The Heart of Domain-Driven Design")</a> (JavaZone Norway, JFokus Sweden, and O'Reilly DDD Super-Stream. 2020-1)</p>
+
+<p><a href="https://www.youtube.com/watch?v=kdpGPDGcbxA">Fostering autonomous teams with proper leadership culture (Panel)</a> (Virtual DDD 2021)</p>
+
+<p><a href="https://www.youtube.com/watch?v=GVa5vI19kZo">Creating a Playbook for DDD for the inside of your team with Julie Lerman (Panel)</a> (Virtual DDD 2020)</p>
+
+<p><a href="">People and Patterns</a> (DDD Europe Online Lightning Talk, 2021)</p>
+
+<p><a href="https://www.youtube.com/watch?v=4yr130f-1FE">Combatting the Near Enemies of Domain Driven Design - at Scale</a> (DDD Europe Amsterdam, O’Reilly Architecture Conference Berlin, VirtualDDD, and DDD eXchange London, 2018-19)</p>
+
+<p><a href="https://www.youtube.com/watch?v=_jqPxGShb90">Organisation Refactoring and Culture Hacking - Lessons from Software</a> (Voxxed Days Banff, Devoxx London and Belgium, and JFokus Stockholm, 2018-19)</p>
 
 <p><a href="https://vimeo.com/181781920">Distributed Architecture and Design: A Scientific Approach</a> (JavaZone 2017 with Kevin Rudland)</p>
 
