Publishing the latest site from the gh-pages branch.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Welcome</title>
-  <meta name="description" content="Hello and welcome to  my blog-aggregator. If you’re looking for my algebra blog which used to live here, it’s not gone far.Over the years I’ve been a little ...">
+  <meta name="description" content="">
 
   <!-- Google Fonts loaded here depending on setting in _data/options.yml true loads font, blank does not-->
   
@@ -81,25 +81,25 @@
 
 <p>Over the years I’ve been a little profligate with my internet prescence. Here’s a handy overview, with some deep links into the semi-interesting bits.</p>
 
-<p>There are four sections: Training, Speaking / Panels, Open Source, and Blogging.  You can also find me on <a href="https://twitter.com/al94781">Twitter</a> and <a href="https://www.linkedin.com/in/andrewharmellaw">LinkedIn</a>.</p>
+<p>There are three sections: Training, Speaking / Panels, Open Source, and Blogging.  You can also find me on <a href="https://twitter.com/al94781">Twitter</a> and <a href="https://www.linkedin.com/in/andrewharmellaw">LinkedIn</a>.</p>
 
-<h1 id="speaking">Training</h1>
-<p>I was fortunate to be asked to write a course for the O'Reilly online training Platform.  The result, a three-hour, hands-on extravaganza is titled <a href="https://learning.oreilly.com/live-training/courses/domain-driven-design-first-steps/0636920051628/">Domain-Driven Design: First Steps</a> and runs every 2 months or so.</p>
+<h1 id="training">Training</h1>
+<p>I was fortunate to be asked to write a course for the O’Reilly online training Platform. The result, a three-hour, hands-on extravaganza is titled <a href="https://learning.oreilly.com/live-training/courses/domain-driven-design-first-steps/0636920051628/">Domain-Driven Design: First Steps</a> and runs every 2 months or so.</p>
 
-<h1 id="speaking">Speaking / Panels</h1>
-<p>I’ve been lucky enough to contribute to a bunch of UK and international conferences and meetups. My main contributions have been as follows:</p>
+<h1 id="speaking--panels">Speaking / Panels</h1>
+<p>I’ve been lucky enough to talk at a bunch of UK and international conferences. My main contributions have been as follows:</p>
 
-<p><a href="">Domain-Driven Design: The Bare Essentials + Microservices (aka "The Heart of Domain-Driven Design")</a> (JavaZone Norway, JFokus Sweden, and O'Reilly DDD Super-Stream. 2020-1)</p>
+<p><a href="https://andrewharmellaw.github.io/">Domain-Driven Design: The Bare Essentials + Microservices (aka “The Heart of Domain-Driven Design”)</a> (JavaZone Norway, JFokus Sweden, and O’Reilly DDD Super-Stream. 2020-1)</p>
 
 <p><a href="https://www.youtube.com/watch?v=kdpGPDGcbxA">Fostering autonomous teams with proper leadership culture (Panel)</a> (Virtual DDD 2021)</p>
 
-<p><a href="https://www.youtube.com/watch?v=GVa5vI19kZo">Creating a Playbook for DDD for the inside of your team with Julie Lerman (Panel)</a> (Virtual DDD 2020)</p>
-
 <p><a href="">People and Patterns</a> (DDD Europe Online Lightning Talk, 2021)</p>
 
-<p><a href="https://www.youtube.com/watch?v=4yr130f-1FE">Combatting the Near Enemies of Domain Driven Design - at Scale</a> (DDD Europe Amsterdam, O’Reilly Architecture Conference Berlin, VirtualDDD, and DDD eXchange London, 2018-19)</p>
+<p><a href="https://www.youtube.com/watch?v=GVa5vI19kZo">Creating a Playbook for DDD for the inside of your team with Julie Lerman (Panel)</a> (Virtual DDD 2020)</p>
 
-<p><a href="https://www.youtube.com/watch?v=_jqPxGShb90">Organisation Refactoring and Culture Hacking - Lessons from Software</a> (Voxxed Days Banff, Devoxx London and Belgium, and JFokus Stockholm, 2018-19)</p>
+<p><a href="https://www.youtube.com/watch?v=4yr130f-1FE">Combatting the Near Enemies of Domain Driven Design - at Scale</a> (DDD Europe in Amsterdam, Virtual DDD, O’Reilly Architecture Conference in Berlin and DDD eXchange in London, 2018-19, all with with <a href="https://twitter.com/gaythu_rajan">Gayathri Thiyagarajan</a>)</p>
+
+<p><a href="https://www.youtube.com/watch?v=_jqPxGShb90">Organisation Refactoring and Culture Hacking - Lessons from Software</a> (Voxxed Days in Banff, Devoxx London and Belgium, and JFokus Stockholm, 2018-19)</p>
 
 <p><a href="https://vimeo.com/181781920">Distributed Architecture and Design: A Scientific Approach</a> (JavaZone 2017 with Kevin Rudland)</p>
 
@@ -160,7 +160,7 @@
       
   </ul>
 <div class="credits">
-<span>&copy; 2020 &nbsp;&nbsp;ANDREW HARMEL-LAW</span></br> <br>
+<span>&copy; 2021 &nbsp;&nbsp;ANDREW HARMEL-LAW</span></br> <br>
 <span>This site was created using the <a href="//github.com/clayh53/tufte-jekyll">Tufte theme</a> for <a href="//jekyllrb.com">Jekyll</a>.</span> 
 </div>  
 </footer>
