--- a/archive.html
+++ b/archive.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Archive</title>
-  <meta name="description" content="                              2017      May                May 19, 2017 &raquo; Gelfand: Chunk 27 - Proving Some Rules for Roots                             ...">
+  <meta name="description" content="">
 
   <!-- Google Fonts loaded here depending on setting in _data/options.yml true loads font, blank does not-->
   
@@ -593,7 +593,7 @@
       
   </ul>
 <div class="credits">
-<span>&copy; 2020 &nbsp;&nbsp;ANDREW HARMEL-LAW</span></br> <br>
+<span>&copy; 2021 &nbsp;&nbsp;ANDREW HARMEL-LAW</span></br> <br>
 <span>This site was created using the <a href="//github.com/clayh53/tufte-jekyll">Tufte theme</a> for <a href="//jekyllrb.com">Jekyll</a>.</span> 
 </div>  
 </footer>
