--- a/index-algebra.html
+++ b/index-algebra.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Algebra</title>
-  <meta name="description" content="Hello and welcome to  my MathDespite my better judgement, I’m going to refer to the topic as ‘Math’ rather than ‘Maths’. Despite being from the UK, it just s...">
+  <meta name="description" content="">
 
   <!-- Google Fonts loaded here depending on setting in _data/options.yml true loads font, blank does not-->
   
@@ -188,7 +188,7 @@
       
   </ul>
 <div class="credits">
-<span>&copy; 2020 &nbsp;&nbsp;ANDREW HARMEL-LAW</span></br> <br>
+<span>&copy; 2021 &nbsp;&nbsp;ANDREW HARMEL-LAW</span></br> <br>
 <span>This site was created using the <a href="//github.com/clayh53/tufte-jekyll">Tufte theme</a> for <a href="//jekyllrb.com">Jekyll</a>.</span> 
 </div>  
 </footer>
