--- a/tags.html
+++ b/tags.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Tags</title>
-  <meta name="description" content="                 	exchange-of-terms 1         	method-addition 2         	method-multiplication 2         	method-long-division 1         	gelfand 31        ...">
+  <meta name="description" content="">
 
   <!-- Google Fonts loaded here depending on setting in _data/options.yml true loads font, blank does not-->
   
@@ -2382,7 +2382,7 @@
       
   </ul>
 <div class="credits">
-<span>&copy; 2020 &nbsp;&nbsp;ANDREW HARMEL-LAW</span></br> <br>
+<span>&copy; 2021 &nbsp;&nbsp;ANDREW HARMEL-LAW</span></br> <br>
 <span>This site was created using the <a href="//github.com/clayh53/tufte-jekyll">Tufte theme</a> for <a href="//jekyllrb.com">Jekyll</a>.</span> 
 </div>  
 </footer>
