Publishing the latest site from the gh-pages branch.

--- a/index-orgs.html
+++ b/index-orgs.html
@@ -89,7 +89,17 @@
 	    <h1>Orgs</h1>
 		<p class="subtitle"></p>	
 	      
-<p><span class="newthought">Hello and welcome </span>  to my posts on organisations.</p>
+<p><span class="newthought">Thanks for browsing </span>  my posts on organisations.</p>
+
+<p>I’ve been interested in orgs for some time.</p>
+
+<p>My interest was initially piqued by Bruce Eckel’s <a href="http://www.reinventing-business.com/">Reinventing Business</a>, then subsequently via experiences running large consulting teams, and experimenting with trust organisation models.</p>
+
+<p>These days organisationsand how they (dis)function comes up more and more frequently.</p>
+
+<p>As I learn, try and make sense of everything, and (hopefully) contribute to making things better, I’ll post here.</p>
+
+<h2 id="posts">Posts</h2>
 
 <ul>
   
