--- a/index-xp-of-dev.html
+++ b/index-xp-of-dev.html
@@ -89,7 +89,17 @@
 	    <h1>XP  of Dev</h1>
 		<p class="subtitle"></p>	
 	      
-<p><span class="newthought">Hello and welcome </span>  to my posts on the experience of development.</p>
+<p><span class="newthought">Hi there,</span>  you’ve found my posts on the experience of development.</p>
+
+<p>The idea is that these <em>might</em> one day turn into a pamphlet or a book. Hence the structure evident in the titles below.</p>
+
+<p>Why am I doing this? I think we developers don’t think enough about what it feel like to write code.  I believe that if we were exposed to this kind of information, it would change how we approach the act of development, how we learn, how we produce and consume code, how we think about our tool chains, and how we collaborate with others.</p>
+
+<p>A quick note on reading. You can skip the Preface if you don’t care how this came about. It will help to read both parts of the introduction to understand how everything which follows is framed.  After that, all the chapters ought to be largely standalone, or cross-linked as appropriate.</p>
+
+<p>Please leave any feedback you might have, either in the Disqus comments below each page, or hit me up on <a href="https://twitter.com/al94781">Twitter</a>.</p>
+
+<h2 id="posts">Posts</h2>
 
 <ul>
   
