Publishing the latest site from the gh-pages branch.

--- a/index-orgs.html
+++ b/index-orgs.html
@@ -101,9 +101,9 @@
 
 <p>My interest was initially piqued by Bruce Eckel’s <a href="http://www.reinventing-business.com/">Reinventing Business</a>, then subsequently via experiences running large consulting teams, and experimenting with trust organisation models.</p>
 
-<p>These days organisationsand how they (dis)function comes up more and more frequently.</p>
+<p>These days organisations and how they (dis)function comes up more and more frequently.</p>
 
-<p>As I learn, try and make sense of everything, and (hopefully) contribute to making things better, I’ll post here.</p>
+<p>As I learn, try and make sense of everything, and (hopefully) contribute to making things better, I’ll post here.  I’m also keeping <a href="orgs-notepad.html">my ideas/reading list/notes/puzzles on a separate page</a>.</p>
 
 <h2 id="posts">Posts</h2>
 
