--- a/index.html
+++ b/index.html
@@ -92,11 +92,19 @@
 	    <h1>Welcome</h1>
 		<p class="subtitle"></p>	
 	      
-<p><span class="newthought">Hello and welcome to</span>  my blog-aggregator. If you’re looking for my algebra blog which used to live here, <a href="index-algebra.html">it’s not gone far</a>.</p>
+<p><span class="newthought">Hello and welcome to</span>  my blog-aggregator.</p>
 
 <p>Over the years I’ve been a little profligate with my internet prescence. Here’s a handy overview, with some deep links into the semi-interesting bits.</p>
 
-<p>There are three sections: Training, Speaking / Panels, Open Source, and Blogging.  You can also find me on <a href="https://twitter.com/al94781">Twitter</a> and <a href="https://www.linkedin.com/in/andrewharmellaw">LinkedIn</a>.</p>
+<p>If I was to sum up everything that I have collected here it would “a series of attempts at <a href="https://www.goodreads.com/book/show/23503006-unflattening">unflattening</a>”. That is to say I’m trying to reconsider how I, and others, construct knowledge, and challenge when I think things could be different.</p>
+
+<p>Beginning with my first conference talk at <a href="https://www.youtube.com/watch?v=znQtAIpXlP4">Devoxx UK in 2014</a>, right up to my current blog series’ on the <a href="index-xp-of-dev.html">experience of development</a> and <a href="index.orgs.html">organisations</a> I’ve been trying to understand why things are they way they are; to bring different perspectives; and ask challenging questions.</p>
+
+<p>Sometimes this involves pointing out what I think we’ve forgotten. Other times it’s to suggest parallels and contrasts with other disciplines.  Other times still I’m just trying to figure stuff out and wanted to share my progress.</p>
+
+<p>There are three sections to all this, based on the medium of my musings: Training, Speaking / Panels, Open Source, and Blogging.  You can also find me on <a href="https://twitter.com/al94781">Twitter</a> and <a href="https://www.linkedin.com/in/andrewharmellaw">LinkedIn</a>.</p>
+
+<p>If you’re looking for my algebra blog which used to live here, <a href="index-algebra.html">it’s not gone far</a>.</p>
 
 <h1 id="training">Training</h1>
 <p>I was fortunate to be asked to write a course for the O’Reilly online training Platform. The result, a three-hour, hands-on extravaganza is titled <a href="https://learning.oreilly.com/live-training/courses/domain-driven-design-first-steps/0636920051628/">Domain-Driven Design: First Steps</a> and runs every 2 months or so.</p>
@@ -104,7 +112,7 @@
 <h1 id="speaking--panels">Speaking / Panels</h1>
 <p>I’ve been lucky enough to talk at a bunch of UK and international conferences. My main contributions have been as follows:</p>
 
-<p><a href="https://andrewharmellaw.github.io/">Domain-Driven Design: The Bare Essentials + Microservices (aka “The Heart of Domain-Driven Design”)</a> (JavaZone Norway, JFokus Sweden, and O’Reilly DDD Super-Stream. 2020-1)</p>
+<p><a href="https://www.youtube.com/watch?v=uBSrr7984GM">Domain-Driven Design: The Bare Essentials + Microservices (aka “The Heart of Domain-Driven Design”)</a> (JavaZone Norway, JFokus Sweden, and O’Reilly DDD Super-Stream. 2020-1)</p>
 
 <p><a href="https://www.youtube.com/watch?v=kdpGPDGcbxA">Fostering autonomous teams with proper leadership culture (Panel)</a> (Virtual DDD 2021)</p>
 
