Publishing the latest site from the gh-pages branch.

--- a/xp-of-dev/xp-of-dev-notepad.html
+++ b/xp-of-dev/xp-of-dev-notepad.html
@@ -108,17 +108,38 @@
 
 <h2 id="ideas-for-posts">Ideas for Posts</h2>
 <ul>
-  <li></li>
+  <li>Mental castle-building. The toil, or ease, by which this happens. The “happy path”, and straying from that path. The wholly-mental aspects of this. Link this back to “models all the way down” an perhaps “fine wines”. Also, mutability? (see chat in SW Dev)</li>
+  <li>The expression of the mental model “castles” into code, into syntax. Just thinking about the writing of the code for now, and joining it into the compilation-surprise loop. We can bring in different languages and their syntaxes / sharp edges here. We can also bring in the Virginia Woolf quotes. Thinking in the syntax. (Harvey Richardson? Chris Phelps?) The fit of language to thinking-style and problem space.</li>
+  <li>The joy of using tools which fit well in your loop. “I once worked with Harvey. He seemed to be able to think <em>in</em> c-shell, sed and awk. He also had a highly controlled environment. Other people take as much joy in their tools and the expression of their castles into ascii code as Harvey did, with less excuse…”. TDD. Other emotions.</li>
+  <li>The “happy path” (and straying from it)</li>
+  <li>Writing vs reading code</li>
+  <li>Usage of feedback loops (inc. history) - how this is a</li>
+  <li>Flow</li>
+  <li>Hell is other developers - The minds of others (there is already a need to understand the mind of the machine). Writing vs reading.  (Previously we were thinking about the minds of the machine). Pair programming.  System Metaphors and DDD</li>
+  <li>Learning and XP of Dev</li>
+  <li>Developer workspaces (and “why?”)</li>
+  <li>TDD</li>
+  <li>Pair programming</li>
+  <li>Flow. Context-swapping</li>
+  <li>Debugging</li>
+  <li>Personal styles and preferences</li>
+  <li>Interviews</li>
+  <li>How to think about this yourself</li>
 </ul>
 
-<h2 id="reading">Reading</h2>
+<h2 id="reading--listening">Reading / Listening</h2>
 <ul>
-  <li></li>
+  <li><a href="https://anchor.fm/happypathprogramming">Happy Path Programming</a></li>
+  <li>A Writers Diary by Virginia Woolf</li>
+  <li><a href="https://www.amazon.co.uk/Man-Blue-Scarf-Sitting-Portrait/dp/0500289719">Man with a Blue Scarf: On Sitting for a portrait for Lucian Freud</a></li>
+  <li>Test Driven Development: By Example by Kent Beck</li>
+  <li>Domain Driven Design by Eric Evans</li>
+  <li><a href="https://www.felienne.com/book">The Programmers Brain</a></li>
 </ul>
 
 <h2 id="notes--puzzles">Notes &amp; Puzzles</h2>
 <ul>
-  <li></li>
+  <li>How might I visualise this?</li>
 </ul>
 
     </article>
