--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 <h1 id="speaking--panels">Speaking / Panels</h1>
 <p>I’ve been lucky enough to talk at a bunch of UK and international conferences. My main contributions have been as follows:</p>
 
+<p><a href="https://www.youtube.com/watch?v=ozB-60pGbDM">Patterns and People</a> (Lightning talk, DDD Europe, 2021)</p>
+
 <p><a href="https://www.youtube.com/watch?v=uBSrr7984GM">Domain-Driven Design: The Bare Essentials + Microservices (aka “The Heart of Domain-Driven Design”)</a> (JavaZone Norway, JFokus Sweden, and O’Reilly DDD Super-Stream. 2020-1)</p>
 
 <p><a href="https://www.youtube.com/watch?v=kdpGPDGcbxA">Fostering autonomous teams with proper leadership culture (Panel)</a> (Virtual DDD 2021)</p>
