Publishing the latest site from the gh-pages branch.

--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
 <h1 id="speaking--panels">Speaking / Panels</h1>
 <p>I’ve been lucky enough to talk at a bunch of UK and international conferences. My main contributions have been as follows:</p>
 
+<p><a href="">The Four Key Metrics, Unleashed!</a> (Talk, Javazone Oslo, 2021)</p>
+
+<p><a href="https://rokkit.live/event/devoxxuk21/talk/9704">The Varieties of development experience</a> (Talk, Devoxx UK, 2021. Site requires <a href="https://rokkit.live/home">registration</a>, but it’s free, and the Devoxx folks built it.)</p>
+
+<p><a href="https://rokkit.live/event/devoxxuk21/talk/9703">What I talk about when I talk about Domain-Driven Design</a> (Talk, Devoxx UK, 2021. Site requires <a href="https://rokkit.live/home">registration</a>, but it’s free, and the Devoxx folks built it.)</p>
+
 <p><a href="https://www.youtube.com/watch?v=ozB-60pGbDM">Patterns and People</a> (Lightning talk, DDD Europe, 2021)</p>
 
 <p><a href="https://www.youtube.com/watch?v=uBSrr7984GM">Domain-Driven Design: The Bare Essentials + Microservices (aka “The Heart of Domain-Driven Design”)</a> (JavaZone Norway, JFokus Sweden, and O’Reilly DDD Super-Stream. 2020-1)</p>
@@ -136,18 +142,16 @@
 
 <p><a href="https://www.youtube.com/watch?v=znQtAIpXlP4">5 Whys: Counter-Intuitive Solutions to (all too Common) Problems</a> (Devoxx UK 2014)</p>
 
-<h1 id="open-source">Open Source</h1>
-<p>I never get as much time as I’d like to work on open source, but I’ve been lucky to have been around for some cool moments.</p>
-
-<p>I was there at the founding of the <a href="https://plugins.jenkins.io/job-dsl/">Jenkins JobDSL</a> (which is still in Jenkins core and - I’m told - partially inspired the Jenkinsfile we have today).</p>
-
-<p>I also started the <a href="https://github.com/andrewharmellaw/archaius-spring-adapter">archaius-spring-adapter</a>, created the open source <a href="https://github.com/Capgemini/grade-ladder">Capgemini Grade Ladder</a>, and contributed <a href="https://github.com/ponylang/ponyc/issues/3098">some documentation improvements</a> for the Pony language.</p>
-
-<p>Sadly my most-starred repo is 100% based on the work of others - an <a href="https://github.com/andrewharmellaw/wardley-maps-book">ascii-doc-ification</a> of <a href="https://twitter.co/swardley">Simon Wardley’s</a> Wardley Mapping blog posts.</p>
-
 <h1 id="blogging">Blogging</h1>
 <h2 id="thoughtworks">Thoughtworks</h2>
-<p>So far, I’ve only written one post for the ThoughtWorks Insights blog: “<a href="https://www.thoughtworks.com/insights/blog/domain-driven-design-neednt-be-hard-heres-how-start">Domain-driven design needn’t be hard. Here’s how to start</a>”.</p>
+<p>“<a href="https://martinfowler.com/articles/scaling-architecture-conversationally.html">Scaling the practice of architecture, conversationally</a>”. My proposal for a way to achieve decenralised decision-making in software teams / organisations</p>
+
+<p>“<a href="https://www.thoughtworks.com/insights/blog/domain-driven-design-neednt-be-hard-heres-how-start">Domain-driven design needn’t be hard. Here’s how to start</a>”. Thoughts on first steps on the path to deploying DDD.</p>
+
+<h2 id="twitter-threads">Twitter threads</h2>
+<p><a href="https://twitter.com/al94781/status/1332989267568635904">Patterns of Anarchy</a> (A set of notable quotes from the 1966 collection of the same title, alongside some musings on what it might mean for organisation design)</p>
+
+<p><a href="https://twitter.com/al94781/status/1315318060702748679">Guerrilla DDD</a> (A quick intro to the elements in the “Supple Design” chapter of Eric Evan’s “Domain Driven Design”, and how to use them without permission from anyone)</p>
 
 <h2 id="capgemini">Capgemini</h2>
 <p>At my previous employer, I and a <a href="https://twitter.com/tsphethean">co-conspirator</a> set up the <a href="https://capgemini.github.io/">Capgemini engineering blog</a>.</p>
@@ -169,6 +173,14 @@
 <h2 id="blogger">Blogger</h2>
 <p>I started (and found my feet) blogging on one of the original platforms - blogger - where the title of <a href="https://the-music-of-time.blogspot.com/">my blog</a> is the best thing about it.</p>
 
+<h1 id="open-source">Open Source</h1>
+<p>I never get as much time as I’d like to work on open source, but I’ve been lucky to have been around for some cool moments.</p>
+
+<p>I was there at the founding of the <a href="https://plugins.jenkins.io/job-dsl/">Jenkins JobDSL</a> (which is still in Jenkins core and - I’m told - partially inspired the Jenkinsfile we have today).</p>
+
+<p>I also started the <a href="https://github.com/andrewharmellaw/archaius-spring-adapter">archaius-spring-adapter</a>, created the open source <a href="https://github.com/Capgemini/grade-ladder">Capgemini Grade Ladder</a>, and contributed <a href="https://github.com/ponylang/ponyc/issues/3098">some documentation improvements</a> for the Pony language.</p>
+
+<p>Sadly my most-starred repo is 100% based on the work of others - an <a href="https://github.com/andrewharmellaw/wardley-maps-book">ascii-doc-ification</a> of <a href="https://twitter.co/swardley">Simon Wardley’s</a> Wardley Mapping blog posts.</p>
 
     </article>
     <span class="print-footer">Welcome - {"name"=>"Andrew Harmel-Law", "github"=>"andrewharmellaw", "twitter"=>"al94781"}</span>
