Publishing the latest site from the gh-pages branch.

--- a/index.html
+++ b/index.html
@@ -109,16 +109,27 @@
 <p>If you’re looking for my algebra blog which used to live here, <a href="index-algebra.html">it’s not gone far</a>.</p>
 
 <h1 id="training">Training</h1>
-<p>I was fortunate to be asked to write a course for the O’Reilly online training Platform. The result, a three-hour, hands-on extravaganza is titled <a href="https://learning.oreilly.com/live-training/courses/domain-driven-design-first-steps/0636920051628/">Domain-Driven Design: First Steps</a> and runs every 2 months or so.</p>
+<p>I was fortunate to be asked to write a course for the O’Reilly online training Platform. The result is the following:</p>
+
+<ul>
+  <li>a three-hour, hands-on extravaganza is titled <a href="https://learning.oreilly.com/live-training/courses/domain-driven-design-first-steps/0636920051628/">Domain-Driven Design: First Steps</a> and runs every 2 months or so.</li>
+  <li>another three-hour chat-fest titled <a href=""></a>. This also runs every 2 months or so</li>
+</ul>
 
 <h1 id="speaking--panels">Speaking / Panels</h1>
 <p>I’ve been lucky enough to talk at a bunch of UK and international conferences. My main contributions have been as follows:</p>
 
-<p><a href="">The Four Key Metrics, Unleashed!</a> (Talk, Javazone Oslo, 2021)</p>
+<p><a href="https://virtualddd.com/sessions/85">(Architectural) Decision Making Gathering</a> (Co-convened this 2023 VirtualDDD Open Space and co-keynoted with Diana Montalion with our talk: “Architecture over Architects”)</p>
 
-<p><a href="https://rokkit.live/event/devoxxuk21/talk/9704">The Varieties of development experience</a> (Talk, Devoxx UK, 2021. Site requires <a href="https://rokkit.live/home">registration</a>, but it’s free, and the Devoxx folks built it.)</p>
+<p><a href="https://www.youtube.com/watch?v=FEqGObgM_ZU">The DDD Europe “Everybody” Keynote</a> (DDD Europe 2022, with Gayathri Thiyagarajan, Diana Montalion, Mike Rozinsky and Dan Young)</p>
 
-<p><a href="https://rokkit.live/event/devoxxuk21/talk/9703">What I talk about when I talk about Domain-Driven Design</a> (Talk, Devoxx UK, 2021. Site requires <a href="https://rokkit.live/home">registration</a>, but it’s free, and the Devoxx folks built it.)</p>
+<p><a href="https://leaddev.com/london/video/commune-ivory-tower-new-approach-architecture-decisions">A Commune in the Ivory Tower?: A new appraoch to architecture decisions</a> (Talk, LeadDev London, 2022)</p>
+
+<p><a href="https://www.youtube.com/watch?v=Fwp33XqPTEY">The Four Key Metrics, Unleashed!</a> (Talk, Javazone Oslo 2021. Reprised at Devoxx UK 2022, XConf Europe 2022, and IT Days Cluj 2022)</p>
+
+<p><a href="https://rokkit.live/event/devoxxuk21/talk/9704">The Varieties of development experience</a> (Talk, Devoxx UK, 2021. Site requires <a href="https://rokkit.live/home">registration</a>, but it’s free, and the Devoxx folks built it.  I was also lucky enough to reprise this at <a href="https://www.leanagileexchange.net/programme/varieties-development-experience">Lean/Agile Exchange</a>)</p>
+
+<p><a href="https://rokkit.live/event/devoxxuk21/talk/9703">What I talk about when I talk about Domain-Driven Design</a> (Talk, Devoxx UK, 2021. Site requires <a href="https://rokkit.live/home">registration</a>, but it’s free, and the Devoxx folks built it.) (I also shared this at InfoShare GDansk).</p>
 
 <p><a href="https://www.youtube.com/watch?v=uBSrr7984GM">Domain-Driven Design: The Bare Essentials + Microservices (aka “The Heart of Domain-Driven Design”)</a> (JavaZone Norway, JFokus Sweden, and O’Reilly DDD Super-Stream. 2020-1)</p>
 
@@ -128,7 +139,7 @@
 
 <p><a href="https://www.youtube.com/watch?v=GVa5vI19kZo">Creating a Playbook for DDD for the inside of your team with Julie Lerman (Panel)</a> (Virtual DDD 2020)</p>
 
-<p><a href="https://www.youtube.com/watch?v=4yr130f-1FE">Combatting the Near Enemies of Domain Driven Design - at Scale</a> (DDD Europe in Amsterdam, Virtual DDD, O’Reilly Architecture Conference in Berlin and DDD eXchange in London, 2018-19, all with with <a href="https://twitter.com/gaythu_rajan">Gayathri Thiyagarajan</a>)</p>
+<p><a href="https://www.youtube.com/watch?v=4yr130f-1FE">Combatting the Near Enemies of Domain Driven Design - at Scale</a> (DDD Europe in Amsterdam, Virtual DDD, O’Reilly Architecture Conference in Berlin, DDD eXchange in London, and SDD London, all with with <a href="https://twitter.com/gaythu_rajan">Gayathri Thiyagarajan</a>)</p>
 
 <p><a href="https://www.youtube.com/watch?v=_jqPxGShb90">Organisation Refactoring and Culture Hacking - Lessons from Software</a> (Voxxed Days in Banff, Devoxx London and Belgium, and JFokus Stockholm, 2018-19)</p>
 
@@ -147,9 +158,19 @@
 <p>“<a href="https://www.thoughtworks.com/insights/blog/domain-driven-design-neednt-be-hard-heres-how-start">Domain-driven design needn’t be hard. Here’s how to start</a>”. Thoughts on first steps on the path to deploying DDD.</p>
 
 <h2 id="twitter-threads">Twitter threads</h2>
+<p><a href="https://twitter.com/al94781/status/1564288746228416513">Thoughts on the anthropology of software (power and freedom)</a> (Set of thoughts inspired by Graeber and Wengrow’s <a href="https://www.goodreads.com/book/show/56269264-the-dawn-of-everything">“The Dawn of Everything: A new History of Humanity”</a>)</p>
+
+<p><a href="https://twitter.com/al94781/status/1559220598424965120">Semi-formed ideas on the Architectural Advice Process and systemic/cross-team decision making…</a> (Riffing on challenges arising from the thread below.)</p>
+
+<p><a href="https://twitter.com/al94781/status/1341319003374039040">Anarchistic Architecture</a> (The thread which eventually became my martinfowler.com blog post <a href="https://martinfowler.com/articles/scaling-architecture-conversationally.html">“Scaling the practice of acrhitecture, coversationally”</a>)</p>
+
 <p><a href="https://twitter.com/al94781/status/1332989267568635904">Patterns of Anarchy</a> (A set of notable quotes from the 1966 collection of the same title, alongside some musings on what it might mean for organisation design)</p>
 
 <p><a href="https://twitter.com/al94781/status/1315318060702748679">Guerrilla DDD</a> (A quick intro to the elements in the “Supple Design” chapter of Eric Evan’s “Domain Driven Design”, and how to use them without permission from anyone)</p>
+
+<p><a href="https://twitter.com/al94781/status/1355498372841549831">Org Design Reading List</a></p>
+
+<p><a href="https://twitter.com/al94781/status/1176152449226334209">Simple steps to adopt DDD</a></p>
 
 <h2 id="capgemini">Capgemini</h2>
 <p>At my previous employer, I and a <a href="https://twitter.com/tsphethean">co-conspirator</a> set up the <a href="https://capgemini.github.io/">Capgemini engineering blog</a>.</p>
@@ -200,7 +221,7 @@
     </li>
   </ul>
 <div class="credits">
-<span>&copy; 2022 &nbsp;&nbsp;ANDREW HARMEL-LAW</span></br> <br>
+<span>&copy; 2023 &nbsp;&nbsp;ANDREW HARMEL-LAW</span></br> <br>
 <span>This site was created using the <a href="//github.com/clayh53/tufte-jekyll">Tufte theme</a> for <a href="//jekyllrb.com">Jekyll</a>.</span> 
 </div>  
 </footer>
