Publishing the latest site from the gh-pages branch.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 <ul>
   <li>a three-hour, hands-on extravaganza is titled <a href="https://learning.oreilly.com/live-training/courses/domain-driven-design-first-steps/0636920051628/">Domain-Driven Design: First Steps</a> and runs every 2 months or so.</li>
-  <li>another three-hour chat-fest titled <a href=""></a>. This also runs every 2 months or so</li>
+  <li>another three-hour chat-fest titled <a href="https://learning.oreilly.com/live-events/architecture-decision-making-by-example/0636920080767/0636920080766/">Architecture Decision Making by Example</a>. This also runs every 2 months or so.</li>
 </ul>
 
 <h1 id="speaking--panels">Speaking / Panels</h1>
