Publishing the latest site from the gh-pages branch.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 	    <h1>Welcome</h1>
 		<p class="subtitle"></p>	
 	      
+<p><span class="newthought">Andrew Harmel-Law is</span>  a <a href="https://www.thoughtworks.com/en-cn/profiles/a/andrew-harmel-law0">Tech Principal at Thoughtworks</a> as well as an author and online trainer for <a href="https://www.oreilly.com/pub/au/8117">O’Reilly</a>, Andrew specialises in Java / JVM technologies, agile delivery, build tools and automation, and domain driven design.</p>
+
+<p>Experienced across the software development lifecycle and in many sectors what motivates him is the efficient delivery of large-scale software solutions, fulfilling complex user needs. He understands that people, architecture, process and tooling all have key roles to play in achieving this. Andrew has a passion for open source software and its communities. He has been involved with OSS to a greater or lesser extent since his career began; as a user, contributor, expert group member, or paid advocate - most famously as one of the <a href="https://github.com/jenkinsci/job-dsl-plugin/">Jenkins JobDSL</a> originators.</p>
+
+<p>Andrew enjoys sharing his experience as much as possible. This sharing is not only seen in his formal consulting engagements, but also informally through mentoring, books, online training, blog posts, conferences (speaking and organising), and open-sourcing his code.  His next book “Facilitating Software Architecture” is making its way onto the internet, a chapter at a time. (<a href="https://www.oreilly.com/library/view/facilitating-software-architecture/9781098151850/">Check it out</a>)</p>
+
 <p><span class="newthought">Hello and welcome to</span>  my creations-aggregator.</p>
 
 <p>Over the years I’ve been a little profligate with my internet prescence. Here’s a handy overview, with some deep links into the semi-interesting bits.</p>
@@ -119,11 +125,19 @@
 <h1 id="speaking--panels">Speaking / Panels</h1>
 <p>I’ve been lucky enough to talk at a bunch of UK and international conferences. My main contributions have been as follows:</p>
 
+<p><a href="https://www.oreilly.com/live-events/software-architecture-hour-the-architecture-advice-process-with-andrew-harmel-law/0636920092589/0636920092588/">The Architecture Advice Process with Andrew Harmel-Law</a> (I was a guest on Neal Ford’s O’Reilly Software Architecture Hour on the 23rd July, 2023)</p>
+
+<p><a href="https://www.youtube.com/watch?v=KryXEZbKaSE">The Changing Nature of Architecture</a> (I was a guest’s on Jabe Bloom’s “Platform Thinking” podcast on the 29th June, 2023)</p>
+
+<p><a href="https://2023.dddeurope.com/program/collective-architecture-live-rpg-experience/">Collective Architecture - Live RPG Experience</a> (My first workshop. DDD Europe 2023, with Diana Montalion)</p>
+
+<p><a href="https://codecamp.ro/speakers/andrew-harmel-law/">Architecture over Architects</a> (Co-presented with Diana Montalion at Codecamp Bucharest, 2023)</p>
+
 <p><a href="https://virtualddd.com/sessions/85">(Architectural) Decision Making Gathering</a> (Co-convened this 2023 VirtualDDD Open Space and co-keynoted with Diana Montalion with our talk: “Architecture over Architects”)</p>
 
 <p><a href="https://www.youtube.com/watch?v=FEqGObgM_ZU">The DDD Europe “Everybody” Keynote</a> (DDD Europe 2022, with Gayathri Thiyagarajan, Diana Montalion, Mike Rozinsky and Dan Young)</p>
 
-<p><a href="https://leaddev.com/london/video/commune-ivory-tower-new-approach-architecture-decisions">A Commune in the Ivory Tower?: A new appraoch to architecture decisions</a> (Talk, LeadDev London, 2022)</p>
+<p><a href="https://leaddev.com/london/video/commune-ivory-tower-new-approach-architecture-decisions">A Commune in the Ivory Tower?: A new approach to architecture decisions</a> (Talk, LeadDev London, 2022. Reprised at Booster Conf Bergen, Devoxx London, and SDD London (all in 2023))</p>
 
 <p><a href="https://www.youtube.com/watch?v=Fwp33XqPTEY">The Four Key Metrics, Unleashed!</a> (Talk, Javazone Oslo 2021. Reprised at Devoxx UK 2022, XConf Europe 2022, and IT Days Cluj 2022)</p>
 
