Publishing the latest site from the gh-pages branch.

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
 
 <p>Andrew enjoys sharing his experience as much as possible. This sharing is not only seen in his formal consulting engagements, but also informally through mentoring, books, online training, blog posts, conferences (speaking and organising), and open-sourcing his code.  His next book “Facilitating Software Architecture” is making its way onto the internet, a chapter at a time. (<a href="https://www.oreilly.com/library/view/facilitating-software-architecture/9781098151850/">Check it out</a>)</p>
 
-<p><span class="newthought">Hello and welcome to</span>  my creations-aggregator.</p>
-
+<h1 id="things-i-made">Things I made</h1>
 <p>Over the years I’ve been a little profligate with my internet prescence. Here’s a handy overview, with some deep links into the semi-interesting bits.</p>
 
 <p>If I was to sum up everything that I have collected here it would “a series of attempts at <a href="https://www.goodreads.com/book/show/23503006-unflattening">unflattening</a>”. That is to say I’m trying to reconsider how I, and others, construct knowledge, and challenge when I think things could be different.</p>
@@ -114,7 +113,7 @@
 
 <p>If you’re looking for my algebra blog which used to live here, <a href="index-algebra.html">it’s not gone far</a>.</p>
 
-<h1 id="training">Training</h1>
+<h2 id="training">Training</h2>
 <p>I was fortunate to be asked to write a course for the O’Reilly online training Platform. The result is the following:</p>
 
 <ul>
@@ -122,7 +121,7 @@
   <li>another three-hour chat-fest titled <a href="https://learning.oreilly.com/live-events/architecture-decision-making-by-example/0636920080767/0636920080766/">Architecture Decision Making by Example</a>. This also runs every 2 months or so.</li>
 </ul>
 
-<h1 id="speaking--panels">Speaking / Panels</h1>
+<h2 id="speaking--panels">Speaking / Panels</h2>
 <p>I’ve been lucky enough to talk at a bunch of UK and international conferences. My main contributions have been as follows:</p>
 
 <p><a href="https://www.oreilly.com/live-events/software-architecture-hour-the-architecture-advice-process-with-andrew-harmel-law/0636920092589/0636920092588/">The Architecture Advice Process with Andrew Harmel-Law</a> (I was a guest on Neal Ford’s O’Reilly Software Architecture Hour on the 23rd July, 2023)</p>
@@ -165,13 +164,13 @@
 
 <p><a href="https://www.youtube.com/watch?v=znQtAIpXlP4">5 Whys: Counter-Intuitive Solutions to (all too Common) Problems</a> (Devoxx UK 2014)</p>
 
-<h1 id="blogging">Blogging</h1>
-<h2 id="thoughtworks">Thoughtworks</h2>
+<h2 id="blogging">Blogging</h2>
+<h3 id="thoughtworks">Thoughtworks</h3>
 <p>“<a href="https://martinfowler.com/articles/scaling-architecture-conversationally.html">Scaling the practice of architecture, conversationally</a>”. My proposal for a way to achieve decenralised decision-making in software teams / organisations</p>
 
 <p>“<a href="https://www.thoughtworks.com/insights/blog/domain-driven-design-neednt-be-hard-heres-how-start">Domain-driven design needn’t be hard. Here’s how to start</a>”. Thoughts on first steps on the path to deploying DDD.</p>
 
-<h2 id="twitter-threads">Twitter threads</h2>
+<h3 id="twitter-threads">Twitter threads</h3>
 <p><a href="https://twitter.com/al94781/status/1564288746228416513">Thoughts on the anthropology of software (power and freedom)</a> (Set of thoughts inspired by Graeber and Wengrow’s <a href="https://www.goodreads.com/book/show/56269264-the-dawn-of-everything">“The Dawn of Everything: A new History of Humanity”</a>)</p>
 
 <p><a href="https://twitter.com/al94781/status/1559220598424965120">Semi-formed ideas on the Architectural Advice Process and systemic/cross-team decision making…</a> (Riffing on challenges arising from the thread below.)</p>
@@ -186,7 +185,7 @@
 
 <p><a href="https://twitter.com/al94781/status/1176152449226334209">Simple steps to adopt DDD</a></p>
 
-<h2 id="capgemini">Capgemini</h2>
+<h3 id="capgemini">Capgemini</h3>
 <p>At my previous employer, I and a <a href="https://twitter.com/tsphethean">co-conspirator</a> set up the <a href="https://capgemini.github.io/">Capgemini engineering blog</a>.</p>
 
 <p>Some of my posts include, “<a href="https://capgemini.github.io/development/how-we-work/">How we work</a>” (co-authored with Malcom Young), “<a href="https://capgemini.github.io/architecture/why-microservices-are-right-for-us-pt1">Why microservices are right for us</a>”, “<a href="https://capgemini.github.io/architecture/microservices-reality-check/">Microservices - a reality check(point)</a>”, “<a href="https://capgemini.github.io/development/its-sometimes-clever-to-admit/">When it’s clever to admit that you’re not feeling clever</a>”, and 
@@ -194,19 +193,19 @@
 
 <p>I also wrote the <a href="https://capgemini.github.io/engineering/Capgemini-Engineering-Diversity-Manifesto/">response from the Capgemini UK Engineering team to the James Damore Anti-Diversity Manifesto</a>.</p>
 
-<h2 id="learning-algebra">Learning Algebra</h2>
+<h3 id="learning-algebra">Learning Algebra</h3>
 <p>Hidden behind this landing page is <a href="index-algebra.html">the math blog</a> I wrote as I worked my way through <a href="https://www.goodreads.com/book/show/2140100.Algebra">Gelfand’s “Algebra”</a>.</p>
 
-<h2 id="learning-new-programming-languages">Learning new Programming Languages</h2>
+<h3 id="learning-new-programming-languages">Learning new Programming Languages</h3>
 <p>As with algebra so with programming languages. I blogged as I learned <a href="https://scalaeyeforthejavaguy.blogspot.com/">Scala</a>, and <a href="https://rubyeyeforthejavaguy.blogspot.com/">Ruby</a>, and managed fitful attempts as I picked up <a href="https://grokkinggolang.github.io/">Go</a>.</p>
 
-<h2 id="medium">Medium</h2>
+<h3 id="medium">Medium</h3>
 <p>I also flirted with a Medium blog for a while. The two best posts are “<a href="https://medium.com/@andrewharmellaw/warhammer-fantasy-career-planning-405b3b6f0d6a">Warhammer fantasy career planning</a>” and “<a href="https://medium.com/@andrewharmellaw/yet-another-post-on-work-life-balance-dc69781ed732">Yet another post on work-life balance</a>”</p>
 
-<h2 id="blogger">Blogger</h2>
+<h3 id="blogger">Blogger</h3>
 <p>I started (and found my feet) blogging on one of the original platforms - blogger - where the title of <a href="https://the-music-of-time.blogspot.com/">my blog</a> is the best thing about it.</p>
 
-<h1 id="open-source">Open Source</h1>
+<h2 id="open-source">Open Source</h2>
 <p>I never get as much time as I’d like to work on open source, but I’ve been lucky to have been around for some cool moments.</p>
 
 <p>I was there at the founding of the <a href="https://plugins.jenkins.io/job-dsl/">Jenkins JobDSL</a> (which is still in Jenkins core and - I’m told - partially inspired the Jenkinsfile we have today).</p>
