--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <p>If I was to sum up everything that I have collected here it would “a series of attempts at <a href="https://www.goodreads.com/book/show/23503006-unflattening">unflattening</a>”. That is to say I’m trying to reconsider how I, and others, construct knowledge, and challenge when I think things could be different.</p>
 
-<p>Beginning with my first conference talk at <a href="https://www.youtube.com/watch?v=znQtAIpXlP4">Devoxx UK in 2014</a>, right up to my current blog series on the <a href="index-xp-of-dev.html">experience of development</a> and <a href="index.orgs.html">organisations</a> I’ve been trying to understand why things are they way they are; to bring different perspectives; and ask challenging questions.</p>
+<p>Beginning with my first conference talk at <a href="https://www.youtube.com/watch?v=znQtAIpXlP4">Devoxx UK in 2014</a>, right up to my blog series on the <a href="index-xp-of-dev.html">experience of development</a> and <a href="index-orgs.html">organisations</a> I’ve been trying to understand why things are they way they are; to bring different perspectives; and ask challenging questions.</p>
 
 <p>Sometimes this involves pointing out what I think we’ve forgotten. Other times it’s to suggest parallels and contrasts with other disciplines.  Other times still I’m just trying to figure stuff out and wanted to share my progress.</p>
 
